[package]
name = "boinkrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
clap = { version = "4.2.1", features=["derive"]}
log = "0.4.0"
env_logger = "0.9.0"
tower-test = "0.4.0"
hyper = "0.14.25"
